# EvolveKB

./: .gitignore  AGENT.md  CONTRIBUTING.md  README.md  README.zh.md  SECURITY.md  USER.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: index.html  karpathy-llm-wiki-comparison.md
evals/: refund_policy_execution_loop.yaml  retrieval_execution_first.yaml  routing_answer_with_evidence.yaml
evolvekb/: __init__.py  cli.py  demo.py  package_kb.py  usage_review.py  wiki.py
evolvekb/assets/: __init__.py  frontmatter.py  hashing.py  loader.py  registry.py
evolvekb/core/: config.py  models.py
evolvekb/evals/: runner.py
evolvekb/evolution/: __init__.py  proposal.py
evolvekb/gates/: __init__.py  builtins.py  engine.py
evolvekb/ingestion/: compiler.py  legacy.py
evolvekb/retrieval/: __init__.py  keyword.py
evolvekb/skills/: __init__.py  registry.py  runtime.py
examples/: demo.md  demo_digest.md  demo_evolve.md  demo_reference.md  demo_transform.md  evidence_answer.md  evolution_loop.md  refund_policy.md  run_evolution_loop.py
kb/: SCHEMA.md  index.md  log.md
kb/knowledge/: EXAMPLE.md  execution-first-kb.md
kb/usage/: EXAMPLE.md  answer-with-evidence.md  compare-frameworks.md  index.md
scripts/: demo.sh  frontmatter.py  ingest.py  kb_validate.py  package_kb.py  review_usage.py  run.py  skill_validate.py  validate.py
settings/: SCHEMA.md  default.yaml  digest.yaml  evolve.yaml  reference.yaml  transform.yaml
tests/: test_phase2_foundation.py
(+12 files in other folders)
