[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolvekb"
version = "0.2.0"
description = "Execution-first knowledge runtime prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
evolvekb = "evolvekb.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["evolvekb*"]

[tool.ruff]
line-length = 100
target-version = "py311"
